# scout

./: .flake8  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.md
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/scout/: __init__.py  cli.py  config.py  db_util.py  models.py  requirements.md
tests/: __init__.py  test_cli.py  test_models.py
