[tool.poetry]
name = "scout"
version = "0.1.0"
description = ""
authors = ["Jason Paris <paris3200@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
nox = "^2020.12.31"
nox-poetry = "^0.8.4"
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-isort = "^4.0.0"
safety = "^1.10.3"
mypy = "^0.812"
pytype = {version = "^2021.4.1", python = "3.8"}
flake8-annotations = "^2.6.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
xdoctest = "^0.15.4"
Sphinx = "^3.5.3"
sphinx-autodoc-typehints = "^1.11.1"
codecov = "^2.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scout = "scout.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["scout"]

[tool.coverage.report]
show_missing = true
fail_under = 100
